tests/ui/asm/naked-asm-outside-naked-fn.stderr
error: the `naked_asm!` macro can only be used in functions marked with `#[naked]`
  --> $DIR/naked-asm-outside-naked-fn.rs:21:14
   |
LL |     unsafe { naked_asm!("") }
   |              ^^^^^^^^^^^^^^

error: the `naked_asm!` macro can only be used in functions marked with `#[naked]`
  --> $DIR/naked-asm-outside-naked-fn.rs:26:18
   |
LL |     unsafe { (|| naked_asm!(""))() }
   |                  ^^^^^^^^^^^^^^

error: the `naked_asm!` macro can only be used in functions marked with `#[naked]`
  --> $DIR/naked-asm-outside-naked-fn.rs:32:19
   |
LL |         unsafe {  naked_asm!("") } ;
   |                   ^^^^^^^^^^^^^^

error: aborting due to 3 previous errors

